@@ -74,7 +74,7 @@ public class CategoryController {
 		Optional<String> oMaxPrice = selectedFacets.stream().filter(p -> p.getFacetingName().equals("price")).map(p -> p.getValue()).findFirst();
     	Double maxPrice = null;
     	if(oMaxPrice.isPresent()) {
-    		maxPrice = new Double(oMaxPrice.get());
+    		maxPrice = Double.valueOf(oMaxPrice.get());
     	}
  
 		
@@ -100,7 +100,7 @@ public class CategoryController {
 		Optional<String> oMaxPrice = selectedFacets.stream().filter(p -> p.getFacetingName().equals("price")).map(p -> p.getValue()).findFirst();
     	Double maxPrice = null;
     	if(oMaxPrice.isPresent()) {
-    		maxPrice = new Double(oMaxPrice.get());
+    		maxPrice =  Double.valueOf(oMaxPrice.get());
     	}
 		
 		Set<EntityFacet> collection = categoryService.findAll(locale, 
